--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# OS and IDE
+.DS-Store
+*.sublime-*
+
+# local data
+/data/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -51,4 +58,3 @@ coverage.xml
 
 # Sphinx documentation
 docs/_build/
-
