--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,12 @@ python:
 
 install:
   - pip install -r requirements.txt
+  - pip install pytest
+  - pip install pytest-cov
   - pip install coveralls
 
 script:
-  - coverage run --source=prettytypo nosetest
+  - py.test --cov-config tox.ini --cov-report '' --cov prettytypo
 
 after_success:
   - coveralls
