--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
   - pypy3
 
 install:
-  - pip install -r requirements.txt
+  - pip install .
   - pip install pytest
   - pip install pytest-cov
   - pip install coveralls
