--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -4,6 +4,6 @@ commit = True
 tag = True
 
 [bumpversion:file:setup.py]
-
-[bumpversion:file:README.md]
+[bumpversion:file:README.rst]
+[bumpversion:file:docs/conf.py]
 
