--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-include *.md requirements.txt
+include *.rst requirements.txt
 recursive-include prettytypo *.py
-include LICENSE docs/changelog.md
+include LICENSE docs/changelog.rst
