--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ commands = pylint -f colorized --rcfile=tox.ini -d R prettytypo
 ; I0012: Locally enabling %s
 ; W0142 Used *args or **kwargs in def args
 ; R0923: Interface not implemented
-disable=I0011,I0012,C0111,W0142,R0923
+disable=I0011,I0012,W0142,R0923
 const-rgx=(([a-zA-Z_][a-zA-Z0-9_]*)|(__.*__))$
 
 files-output=no
