split lines done

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = flake8,pylint,py27,py34,pypy,pypy3,coverage
+envlist = flake8,py27,py34,pypy,pypy3,coverage
 
 [tox:hudson]
 downloadcache = {toxworkdir}/_download
@@ -12,15 +12,10 @@ commands = flake8 prettytypo
 [flake8]
 exclude = .tox
 
-[testenv:refactory]
-deps = pylint
-
-commands = pylint -f colorized --rcfile=tox.ini prettytypo
-
 [testenv:pylint]
 deps = pylint
 
-commands = pylint -f colorized --rcfile=tox.ini -d R prettytypo
+commands = pylint -f colorized --rcfile=tox.ini prettytypo
 
 [pylint]
 ; C0111 Missing docstring
